--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="nubla_umidade">
-                    <img src="https://openweathermap.org/img/wn/04n.png" alt="">
+                    <img class="img_nuvem" src="https://openweathermap.org/img/wn/04n.png" alt="nuvem/momento">
                     <h3 class="nublado">nublado</h3>
                 </div>
                 <div class="_div_umidade">
