--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="/js/myscript.js"></script>
+    <script src="js/myscript.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400;600;800&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,16 +35,16 @@
                 </div>
 
                 <div class="city_graus">
-                    <h2 class="nome_cidade_tempo">Tempo Bahia</h2>
-                    <p class="graus_city">21 C</p>
+                    <h2 class="nome_cidade_tempo">DIGITE UMA CIDADE</h2>
+                    <p class="graus_city">ºc</p>
                 </div>
 
                 <div class="nubla_umidade">
                     <img class="img_nuvem" src="https://openweathermap.org/img/wn/04n.png" alt="nuvem/momento">
-                    <h3 class="nublado">nublado</h3>
+                    <h3 class="nublado">!?</h3>
                 </div>
                 <div class="_div_umidade">
-                    <p class="umidade">Umidade 70c</p>
+                    <p class="umidade">Busque por uma cidade!</p>
                 </div>
             </div>
         </section>
