--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="nubla_umidade">
-                    <img class="img_nuvem" src="https://openweathermap.org/img/wn/04n.png" alt="nuvem/momento">
+                    <img id="img_nuvem" src="https://openweathermap.org/img/wn/04n.png" alt="nuvem/momento">
                     <h3 class="nublado">!?</h3>
                 </div>
                 <div class="_div_umidade">
